force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>Shipment object stores shipments requested against a pickup.</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>