force-app/main/default/objects/Shipment__c/fields/Account_text__c.field-meta.xml
<CustomField>
    <fullName>Account_text__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>