force-app/main/default/objects/Shipment__c/fields/Actual_Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Visit__c</fullName>
    <label>Actual Date of Visit</label>
    <type>Date</type>
</CustomField>