force-app/main/default/objects/Shipment__c/fields/AddressBook__c.field-meta.xml
<CustomField>
    <fullName>AddressBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>