force-app/main/default/objects/Shipment__c/fields/Agency_Fees__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fees__c</fullName>
    <label>Agency Fees</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>