force-app/main/default/objects/Shipment__c/fields/Airway_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Airway_Bill_Number__c</fullName>
    <label>Airway Bill Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>