force-app/main/default/objects/Shipment__c/fields/API_or_Excel__c.field-meta.xml
<CustomField>
    <fullName>API_or_Excel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API or Excel</label>
    <type>Checkbox</type>
</CustomField>