force-app/main/default/objects/Shipment__c/fields/Approx_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Approx_Sale_Value__c</fullName>
    <label>Approx Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>