force-app/main/default/objects/Shipment__c/fields/Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Appt_Date__c</fullName>
    <label>Appt Date</label>
    <type>Date</type>
</CustomField>