force-app/main/default/objects/Shipment__c/fields/Bag_No__c.field-meta.xml
<CustomField>
    <fullName>Bag_No__c</fullName>
    <label>Bag No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>