force-app/main/default/objects/Shipment__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <label>Barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>