force-app/main/default/objects/Shipment__c/fields/Barcode_Location__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Location__c</fullName>
    <label>Barcode Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>