force-app/main/default/objects/Shipment__c/fields/Bill_to_1__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_1__c</fullName>
    <label>Bill to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipper</fullName>
                <default>true</default>
                <label>Shipper</label>
            </value>
            <value>
                <fullName>Consignee</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>