force-app/main/default/objects/Shipment__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Bill To)</relationshipLabel>
    <relationshipName>Shipments_Bill_To</relationshipName>
    <type>Lookup</type>
</CustomField>