force-app/main/default/objects/Shipment__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Bill To Account)</relationshipLabel>
    <relationshipName>Shipments2</relationshipName>
    <type>Lookup</type>
</CustomField>