force-app/main/default/objects/Shipment__c/fields/Bill_To_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_GSTIN__c</fullName>
    <label>Bill To GSTIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>