force-app/main/default/objects/Shipment__c/fields/Bill_To_Party__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Party__c</fullName>
    <label>Bill To Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>