force-app/main/default/objects/Shipment__c/fields/Bill_To_Party_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Party_Address__c</fullName>
    <label>Bill To Party Address</label>
    <type>TextArea</type>
</CustomField>