force-app/main/default/objects/Shipment__c/fields/Bill_To_Party_PAN__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Party_PAN__c</fullName>
    <label>Bill To Party PAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>