force-app/main/default/objects/Shipment__c/fields/Bill_To_Party_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Party_Pincode__c</fullName>
    <label>Bill To Party Pincode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>