force-app/main/default/objects/Shipment__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AddressBook__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Billing_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>AddressBook__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (Billing Address)</relationshipLabel>
    <relationshipName>Shipments3</relationshipName>
    <type>Lookup</type>
</CustomField>