force-app/main/default/objects/Shipment__c/fields/Billing_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Address__c</fullName>
    <formula>Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_Line_1__c  +  &apos; &apos; +
Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_Line_2__c  +  &apos; &apos; +
Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_City__c  +  &apos; &apos; +
Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_State__c  +  &apos; &apos; +
Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_Country__c  +  &apos; &apos; +
Billing_Entity_Name_TMS__r.GSTIN_Principle_Business_Address_Pincode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Entity Address</label>
    <type>Text</type>
</CustomField>