force-app/main/default/objects/Shipment__c/fields/Billing_Entity_GST__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_GST__c</fullName>
    <formula>Billing_Entity_Name_TMS__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Entity GST</label>
    <type>Text</type>
</CustomField>