force-app/main/default/objects/Shipment__c/fields/Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Name__c</fullName>
    <label>Billing Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>