force-app/main/default/objects/Shipment__c/fields/Billing_Entity_Name_TMS__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Name_TMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity Name</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>