force-app/main/default/objects/Shipment__c/fields/Billing_Entity_PAN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_PAN__c</fullName>
    <formula>Billing_Entity_Name_TMS__r.Billling_Entity_PAN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Entity PAN</label>
    <type>Text</type>
</CustomField>