force-app/main/default/objects/Shipment__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Billing</fullName>
            </value>
            <value>
                <fullName>Verified for Billing</fullName>
            </value>
            <value>
                <fullName>Picked for Billing</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>