force-app/main/default/objects/Shipment__c/fields/BillTo_Party_Address__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Party_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Party Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (Bill To Party Address)</relationshipLabel>
    <relationshipName>BVCShipments</relationshipName>
    <type>Lookup</type>
</CustomField>