force-app/main/default/objects/Shipment__c/fields/BOE_No__c.field-meta.xml
<CustomField>
    <fullName>BOE_No__c</fullName>
    <description>This field is for Clearance</description>
    <label>BOE No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>