force-app/main/default/objects/Shipment__c/fields/Breadth__c.field-meta.xml
<CustomField>
    <fullName>Breadth__c</fullName>
    <label>Breadth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>