force-app/main/default/objects/Shipment__c/fields/BVC_AWB_No__c.field-meta.xml
<CustomField>
    <fullName>BVC_AWB_No__c</fullName>
    <label>BVC AWB No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>