force-app/main/default/objects/Shipment__c/fields/BVC_CB_BEDate__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_BEDate__c</fullName>
    <label>BE Date</label>
    <type>Date</type>
</CustomField>