force-app/main/default/objects/Shipment__c/fields/BVC_CB_BENo__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_BENo__c</fullName>
    <label>BE No CB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>