force-app/main/default/objects/Shipment__c/fields/BVC_CB_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_Bill_Date__c</fullName>
    <label>Bill Date</label>
    <type>Date</type>
</CustomField>