force-app/main/default/objects/Shipment__c/fields/BVC_CB_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_Bill_No__c</fullName>
    <label>Bill No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>