force-app/main/default/objects/Shipment__c/fields/BVC_CB_CustomerAddressId__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_CustomerAddressId__c</fullName>
    <label>Customer Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>