force-app/main/default/objects/Shipment__c/fields/BVC_CB_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_Product_Description__c</fullName>
    <label>CB Product Description</label>
    <type>TextArea</type>
</CustomField>