force-app/main/default/objects/Shipment__c/fields/BVC_CB_ShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_ShipmentDate__c</fullName>
    <label>Shipment Date</label>
    <type>DateTime</type>
</CustomField>