force-app/main/default/objects/Shipment__c/fields/BVC_CB_ShipmentNo__c.field-meta.xml
<CustomField>
    <fullName>BVC_CB_ShipmentNo__c</fullName>
    <label>Shipment No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>