force-app/main/default/objects/Shipment__c/fields/BVC_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>BVC_Delivery_Status__c</fullName>
    <label>BVC Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>