force-app/main/default/objects/Shipment__c/fields/BVC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>BVC_Product_Name__c</fullName>
    <label>BVC Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>