force-app/main/default/objects/Shipment__c/fields/BVC_Products__c.field-meta.xml
<CustomField>
    <fullName>BVC_Products__c</fullName>
    <label>BVC Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValSHIP</fullName>
            </value>
            <value>
                <fullName>GoldSHIP</fullName>
            </value>
            <value>
                <fullName>SilverSHIP</fullName>
            </value>
            <value>
                <fullName>ExhibiSHIP</fullName>
            </value>
            <value>
                <fullName>LuxeSHIP</fullName>
            </value>
            <value>
                <fullName>eSHIP</fullName>
            </value>
            <value>
                <fullName>ieSHIP</fullName>
            </value>
            <value>
                <fullName>ivalSHIP</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>ExhibiSHIP-C2C</fullName>
                <isActive>false</isActive>
                <label>ExhibiSHIP-C2C</label>
            </value>
            <value>
                <fullName>ExhibiSHIP-Vauting</fullName>
                <isActive>false</isActive>
                <label>ExhibiSHIP-Vauting</label>
            </value>
            <value>
                <fullName>ExhibiSHIP-Within City</fullName>
                <isActive>false</isActive>
                <label>ExhibiSHIP-Within City</label>
            </value>
            <value>
                <fullName>GoldSHIP-Express C2C</fullName>
                <isActive>false</isActive>
                <label>GoldSHIP-Express C2C</label>
            </value>
            <value>
                <fullName>GoldSHIP-Special Service</fullName>
                <isActive>false</isActive>
                <label>GoldSHIP-Special Service</label>
            </value>
            <value>
                <fullName>GoldSHIP-Surface C2C</fullName>
                <isActive>false</isActive>
                <label>GoldSHIP-Surface C2C</label>
            </value>
            <value>
                <fullName>GoldSHIP-Vauting</fullName>
                <isActive>false</isActive>
                <label>GoldSHIP-Vauting</label>
            </value>
            <value>
                <fullName>GoldSHIP-Within City</fullName>
                <isActive>false</isActive>
                <label>GoldSHIP-Within City</label>
            </value>
            <value>
                <fullName>SilverSHIP-Express C2C</fullName>
                <isActive>false</isActive>
                <label>SilverSHIP-Express C2C</label>
            </value>
            <value>
                <fullName>SilverSHIP-Special Service</fullName>
                <isActive>false</isActive>
                <label>SilverSHIP-Special Service</label>
            </value>
            <value>
                <fullName>SilverSHIP-Surface C2C</fullName>
                <isActive>false</isActive>
                <label>SilverSHIP-Surface C2C</label>
            </value>
            <value>
                <fullName>SilverSHIP-Vauting</fullName>
                <isActive>false</isActive>
                <label>SilverSHIP-Vauting</label>
            </value>
            <value>
                <fullName>SilverSHIP-Within City</fullName>
                <isActive>false</isActive>
                <label>SilverSHIP-Within City</label>
            </value>
            <value>
                <fullName>ValSHIP Express C2C</fullName>
                <isActive>false</isActive>
                <label>ValSHIP Express C2C</label>
            </value>
            <value>
                <fullName>ValSHIP-DTA</fullName>
                <isActive>false</isActive>
                <label>ValSHIP-DTA</label>
            </value>
            <value>
                <fullName>ValSHIP-Express C2C</fullName>
                <isActive>false</isActive>
                <label>ValSHIP-Express C2C</label>
            </value>
            <value>
                <fullName>ValSHIP-Special Service</fullName>
                <isActive>false</isActive>
                <label>ValSHIP-Special Service</label>
            </value>
            <value>
                <fullName>ValSHIP-Surface C2C</fullName>
                <isActive>false</isActive>
                <label>ValSHIP-Surface C2C</label>
            </value>
            <value>
                <fullName>ValSHIP-Within City</fullName>
                <isActive>false</isActive>
                <label>ValSHIP-Within City</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>