force-app/main/default/objects/Shipment__c/fields/BVC_Remark__c.field-meta.xml
<CustomField>
    <fullName>BVC_Remark__c</fullName>
    <label>BVC Remark</label>
    <type>TextArea</type>
</CustomField>