force-app/main/default/objects/Shipment__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>TextArea</type>
</CustomField>