force-app/main/default/objects/Shipment__c/fields/Cargo_Type__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Type__c</fullName>
    <formula>CASE(Product_Description__c, 
					&quot;Machinery&quot;, &quot;General Cargo&quot;,
					&quot;Packing Material&quot;, &quot;General Cargo&quot;,
					&quot;Coloured &amp; Gem Stones&quot;, &quot;Valuable&quot;,
					&quot;Cut &amp; Polished Diamonds&quot;, &quot;Valuable&quot;,
					&quot;Diamond Jewellery&quot;, &quot;Valuable&quot;,
					&quot;Dore Bar&quot;, &quot;Valuable&quot;,
					&quot;Gold Bar&quot;, &quot;Valuable&quot;,
					&quot;Gold Coin&quot;, &quot;Valuable&quot;,
					&quot;Gold Jewellery&quot;, &quot;Valuable&quot;,
					&quot;Platinum Jewellery&quot;, &quot;Valuable&quot;,
					&quot;Diamond Powder&quot;, &quot;Vulnerable&quot;,
					&quot;Imitation Jewellery&quot;, &quot;Vulnerable&quot;,
					&quot;Silver Bar&quot;, &quot;Vulnerable&quot;,
					&quot;Silver Coin&quot;, &quot;Vulnerable&quot;,
					&quot;Silver Jewellery&quot;, &quot;Vulnerable&quot;,
					&quot;Other&quot;, &quot;Perishable&quot;,
					null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Type</label>
    <type>Text</type>
</CustomField>