force-app/main/default/objects/Shipment__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>