force-app/main/default/objects/Shipment__c/fields/Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight__c</fullName>
    <description>International &amp; Domestic</description>
    <label>Chargeable Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>