force-app/main/default/objects/Shipment__c/fields/Chargeable_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight_UOM__c</fullName>
    <description>International &amp; Domestic</description>
    <label>Chargeable Weight UOM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>