force-app/main/default/objects/Shipment__c/fields/checkPayment__c.field-meta.xml
<CustomField>
    <fullName>checkPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkPayment</label>
    <type>Checkbox</type>
</CustomField>