force-app/main/default/objects/Shipment__c/fields/COD_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>COD_Collection_Date__c</fullName>
    <label>COD Collection Date</label>
    <type>Date</type>
</CustomField>