force-app/main/default/objects/Shipment__c/fields/COD_Paid_Via__c.field-meta.xml
<CustomField>
    <fullName>COD_Paid_Via__c</fullName>
    <label>COD Paid Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>