force-app/main/default/objects/Shipment__c/fields/COD_Reimbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>COD_Reimbursement_Date__c</fullName>
    <label>COD Reimbursement Date</label>
    <type>Date</type>
</CustomField>