force-app/main/default/objects/Shipment__c/fields/COD_UTR_Date__c.field-meta.xml
<CustomField>
    <fullName>COD_UTR_Date__c</fullName>
    <label>COD UTR Date</label>
    <type>Date</type>
</CustomField>