force-app/main/default/objects/Shipment__c/fields/COD_Value__c.field-meta.xml
<CustomField>
    <fullName>COD_Value__c</fullName>
    <label>COD Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>