force-app/main/default/objects/Shipment__c/fields/Community_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Billing Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (Community Billing Address)</relationshipLabel>
    <relationshipName>Shipments6</relationshipName>
    <type>Lookup</type>
</CustomField>