force-app/main/default/objects/Shipment__c/fields/Community_Consignee_Account__c.field-meta.xml
<CustomField>
    <fullName>Community_Consignee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Consignee Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Parent.Customer_Id__c</field>
            <operation>equals</operation>
            <valueField>$User.Parent_Customer_Id__c</valueField>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Shipping Account Community</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipper Shipments</relationshipLabel>
    <relationshipName>ShipperShipments</relationshipName>
    <type>Lookup</type>
</CustomField>