force-app/main/default/objects/Shipment__c/fields/Community_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Destination_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Destination Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (DestinationAddress)</relationshipLabel>
    <relationshipName>Shipments5</relationshipName>
    <type>Lookup</type>
</CustomField>