force-app/main/default/objects/Shipment__c/fields/Community_Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Origin_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Origin Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Shipments (OriginAddress)</relationshipLabel>
    <relationshipName>Shipments4</relationshipName>
    <type>Lookup</type>
</CustomField>