force-app/main/default/objects/Shipment__c/fields/Confirmed_By_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By_Email_ID__c</fullName>
    <label>Confirmed By Email ID</label>
    <type>Email</type>
</CustomField>