force-app/main/default/objects/Shipment__c/fields/Consignee_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address__c</fullName>
    <description>This is a field for all businesses</description>
    <label>Consignee Address</label>
    <type>TextArea</type>
</CustomField>