force-app/main/default/objects/Shipment__c/fields/Consignee_Designation__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Designation__c</fullName>
    <label>Consignee Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>