force-app/main/default/objects/Shipment__c/fields/Consignee_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Email_ID__c</fullName>
    <label>Consignee Email ID</label>
    <type>Email</type>
</CustomField>