force-app/main/default/objects/Shipment__c/fields/Consignee_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Consignee_GSTIN__c</fullName>
    <label>Consignee GSTIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>