force-app/main/default/objects/Shipment__c/fields/Consignee_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Mobile__c</fullName>
    <label>Consignee Mobile</label>
    <length>10</length>
    <type>Text</type>
</CustomField>