force-app/main/default/objects/Shipment__c/fields/Consignee_Name_TMS__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Name_TMS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Consignee Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Shipping</value>
        </filterItems>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Consignee Name)</relationshipLabel>
    <relationshipName>Shipments4</relationshipName>
    <type>Lookup</type>
</CustomField>